--- a/create-micro-manifest.html.md.erb
+++ b/create-micro-manifest.html.md.erb
@@ -14,7 +14,7 @@ Refer to the example for the IaaS you plan to use:
 
 ## <a id="anatomy"></a> Anatomy of a Manifest ##
 
-You begin the BOSH deployment manifest with three dashes, followed by the name you give the deployment.
+Begin the BOSH deployment manifest with three dashes, followed by your name for the deployment.
 
 For example:
 
@@ -51,9 +51,24 @@ logging:
 ### <a id='network'></a> The network block ###
 
 The `network` block is where you specify network configuration information for the deployment.
-
-**Note**: This block is named "network" (singular) for MicroBOSH, as opposed to "networks" (plural)
+This block is named "network" (singular) for MicroBOSH, as opposed to "networks" (plural)
 for multi-VM BOSH.
+
+The `type` attribute can be set to either of two values:
+
+* `dynamic` means that DHCP is used to assign the MicroBOSH VM an IP address.
+* `manual` means that you set the IP address for the MicroBOSH VM, in the manifest.
+
+The `dns` sub-block is for nameservers you want the operating system of the MicroBOSH VM to use.
+They are written to the `/etc/resolv.conf` file.
+MicroBOSH components could use them to resolve IaaS FQDNs, for example.
+
+The optional `vip` attribute allows you to assign a floating IP address to the MicroBOSH VM.
+Then you can access the VM from outside of the its network.
+If set, `allocated_floating_ip` **must** be a floating IP that was allocated before you deploy.
+
+The `network` sub-block is IaaS-dependent, because subnets, and other
+keys may differ from IaaS to IaaS.
 
 For example:
 
@@ -74,20 +89,20 @@ network:
       subnet: subnet-d597b993
 </pre>
 
-This `cloud properties` sub-block is IaaS-dependent, because subnets, and other
-keys may differ from IaaS to IaaS.
-
 ### <a id='resources'></a> The resources block ###
 
-The resources block specifies the size of the `persistent_disk`
+The resources block specifies the size of a persistent disk
 to be created and attached to the MicroBOSH VM.
-MicroBOSH stores its data on the persistent disk, so that no data
+MicroBOSH stores its data on the persistent disk such that no data
 is lost when the VM is restarted or when you update MicroBOSH.
 
 `persistent_disk` is specified in megabytes.
 For example, a value of `16384` equates to 16 Gigabytes.
 
-The content of the `cloud_properties` sub-block varies from IaaS to IaaS.
+Persistent disk differs from ephemeral disk, that is, the disk space allocated
+to the MicroBOSH VM ...
+
+Next comes the `cloud_properties` sub-block, whose content varies from IaaS to IaaS.
 
 For example:
 
@@ -102,8 +117,8 @@ resources:
 
 ### <a id='cloud'></a> The cloud block ###
 
-The resources block specifies the IaaS you want to use in the `plugin` attribute,
-and `properties`, whose content differs from IaaS to IaaS.
+The cloud block specifies the IaaS you want to use, in the `plugin` attribute.
+Next comes the `properties` sub-block, whose content differs from IaaS to IaaS.
 
 For example:
 
@@ -113,20 +128,30 @@ cloud:
   properties:
     openstack:
       auth_url: http://<identity_server>:5000/v2.0
-      username: <username>
-      api_key: <password>
-      tenant: <tenant>
-      region: <region> # Optional
+      username: &lt;username&gt;
+      api_key: &lt;password&gt;
+      tenant: &lt;tenant&gt;
+      region: &lt;region&gt; # Optional
       default_security_groups: ["ssh", "bosh"]
-      default_key_name: <microbosh_keypair>
-      private_key: <path_to_microbosh_keypar_private_key>
+      default_key_name: &lt;microbosh_keypair&gt;
+      private_key: &lt;path_to_microbosh_keypar_private_key&gt;
 </pre>
 
 ### <a id='apply'></a> The apply_spec block ###
 
-In the `apply_spec` block, the `properties` sub-block consists of headings followed by
-one or more lines of configuration information.
-The content varies from IaaS to IaaS.
+The content of the `apply_spec` block varies from IaaS to IaaS.
+
+In this block you specify configuration information for
+MicroBOSH components like the Director and the Health Monitor, as
+well as for elements of infrastructure like the vCenter in vSphere.
+
+MicroBOSH has a nameserver component called `powerDNS`.
+If, after you deploy MicroBOSH, you use it deploy other software,
+MicroBOSH will create VMs as it deploys that software.
+VMs that MicroBOSH creates use the powerDNS on their parent VM to resolve IP addresses.
+
+In the `dns` sub-block of the `apply_spec` block, you specify the IP of the nameserver,
+or recursor, that powerDNS should use to resolve names external to its domain.
 
 For example:
 
@@ -140,6 +165,8 @@ apply_spec:
     ntp:
       - 0.north-america.pool.ntp.org
       - 1.north-america.pool.ntp.org
+    dns:
+      recursor: &lt;ip_for_dns&gt;
 </pre>
 
 ## <a id="creating"></a> How to Create a Manifest ##
@@ -153,6 +180,8 @@ to create a manifest.
 These examples are designed to illuminate what each IaaS requires in a MicroBOSH deployment manifest.
 
 ### <a id="ex-aws"></a> AWS ###
+
+You can adapt this example to your environment settings.
 
 ~~~yaml
 name: microbosh-aws
@@ -177,8 +206,8 @@ cloud:
   plugin: aws
   properties:
     aws:
-      access_key_id: AKIAIYJWVDUP4KRESQ
-      secret_access_key: EVGFswlmOvA33ZrU1ViFEtXC5Sugc19yPzoWRf
+      access_key_id: <access_key_id>
+      secret_access_key: <secret_access_key>
       default_key_name: bosh
       default_security_groups: ["bosh"]
       ec2_private_key: ~/.ssh/bosh
@@ -198,7 +227,7 @@ apply_spec:
 
 ### <a id="ex-openstack"></a> OpenStack ###
 
-Explanatory comments follow this example.
+You can adapt this example to your environment settings.
 
 ~~~yaml
 ---
@@ -213,7 +242,7 @@ logging:
 network:
   type: manual
   vip: <allocated_floating_ip> # Optional
-  ip: <static_ip>
+  ip: <tatic_ip>
   cloud_properties:
     net_id: <network_uuid>
 
@@ -246,13 +275,9 @@ apply_spec:
       - 1.north-america.pool.ntp.org
 ~~~
 
-Adapt the `micro_bosh.yml` file to your environment settings:
+#### <a id="openstack-nw"></a>OpenStack networking options ####
 
-#### <a id="network_properties"></a>Network properties ####
-
-This section sets the network configuration for your Micro BOSH.
-
-If you are using nova-network, adapt the network section with below settings:
+If you are using [nova-network](), the network block takes the following form:
 
 ~~~yaml
 network:
@@ -260,11 +285,16 @@ network:
   vip: <allocated_floating_ip> # Optional
 ~~~
 
-* The `vip` option is optional, and allows you to associate a floating IP address to the Micro Bosh vm in case you want to access it from outside of the vm network. If set, `allocated_floating_ip` **must** be a previously allocated floating ip.
 
-If you are using the new [OpenStack Networking](http://www.openstack.org/software/openstack-networking/) component, adapt the network section with below settings:
+If you are using the [OpenStack Networking](http://www.openstack.org/software/openstack-networking/) component,
+the network block takes one of two forms, depending on whether you specify dynamic or manual
+networking.
 
-1. If your network has DHCP enabled, you can let OpenStack pick an IP address:
+In both cases, use the `net_id` attribute to set the `network_uuid` of the OpenStack network you want to use.
+You must use an existing Network UUID.
+You can list your OpenStack networks using the command `quantum net-list`.
+
+For dynamic networking, the network block takes the following form:
 
 ~~~yaml
 network:
@@ -274,10 +304,8 @@ network:
     net_id: <network_uuid>
 ~~~
 
-* The `vip` option is optional, and allows you to associate a floating IP address to the Micro Bosh vm in case you want to access it from outside of the vm network. If set, `allocated_floating_ip` **must** be a previously allocated floating ip.
-* The `net_id` option sets the OpenStack network to use. `network_uuid` **must** be an existing Network UUID (you can list your OpenStack networks using the command `quantum net-list`).
 
-1. If you want to set the Micro Bosh IP address manually:
+For manual networking, the network block takes the following form:
 
 ~~~yaml
 network:
@@ -288,13 +316,14 @@ network:
     net_id: <network_uuid>
 ~~~
 
-* The `vip` option is optional, and allows you to associate a floating IP address to the Micro Bosh vm in case you want to access it from outside of the vm network. If set, `allocated_floating_ip` **must** be a previously allocated floating ip.
-* The `ip` option sets the IP address to assign to the Micro BOSH vm. `static_ip` **must** be an IP address belonging to the IP range of one of the network subnets set in `net_id`.
-* The `net_id` option sets the OpenStack network to use. `network_uuid` **must** be an existing Network UUID (you can list your OpenStack networks using the command `quantum net-list`).
+**Note**: Manual networking requires you to set the IP address of the MicroBOSH VM.
+The IP address you choose must be within the IP range of a subnet set of the network specified in `net_id`.
 
-#### <a id="resources_properties"></a>Resources properties ####
+#### <a id="flavors"></a>OpenStack flavors ####
 
-This section sets the resources configuration for your Micro Bosh.
+OpenStack describes VMs in terms of flavors.
+You specify the flavor in the `instance_type` attribute of the `cloud_properties` sub-block of the `resources` block.
+Choose a flavor that has some ephemeral disk as described in [validate your OpenStack](validate_openstack.html).
 
 ~~~yaml
 resources:
@@ -303,12 +332,15 @@ resources:
     instance_type: <flavor_name>
 ~~~
 
+#### <a id="openstack-cloud-props"></a>OpenStack cloud properties ####
 
-* The `instance_type` set the OpenStack flavor used for the Micro BOSH vm. The `flavor_name` **must** have ephemeral disk (check the [validate your OpenStack](validate_openstack.html) guide)
+The `properties` sub-block of the `cloud` block is where you set the following OpenStack configuration information:
 
-#### <a id="cloud_properties"></a>Cloud properties ####
-
-This section sets the cloud configuration for your Micro BOSH.
+* `auth_url` is the [OpenStack identity](http://www.openstack.org/software/openstack-shared-services/) server.
+* `username`, `api_key` and `tenant` are your OpenStack credentials.
+* `region` is the OpenStack region (optional).
+* `default_security_groups` sets the security groups used by Micro BOSH. These security groups must exist before deployment.
+* `default_key_name` and `private_key` are the key pair used by Micro BOSH. This keypair must exist before deployment.
 
 ~~~yaml
 cloud:
@@ -325,15 +357,9 @@ cloud:
       private_key: <path_to_microbosh_keypar_private_key>
 ~~~
 
-* The `auth_url` option set your [OpenStack identity](http://www.openstack.org/software/openstack-shared-services/) server.
-* The `username`, `api_key` and `tenant` options sets your OpenStack credentials.
-* The `region` option is optional, and allows you to set the OpenStack region to be used.
-* The `default_security_groups` option set the security groups used by Micro BOSH. The `microbosh_security_group` **must** be an existing security group.
-* The `default_key_name` and `private_key` options sets the key pair used by Micro BOSH. The `microbosh_keypair` **must** be an existing keypair.
-
 ### <a id="ex-vsphere"></a> vSphere ###
 
-Explanatory comments follow this example.
+You can adapt this example to your environment settings.
 
 ~~~yaml
 ---
@@ -341,7 +367,7 @@ name: microbosh-vsphere
 
 logging:
   # If needed increase the default logging level to trace REST traffic with IaaS providers. Default is info
-  level: info
+  level: debug
   # Default location is <deployment_dir>/bosh_micro_deploy.log
   # file :
 
@@ -350,7 +376,7 @@ network:
   netmask: <netmask_for_the_subnet_you_are_deploying_to>
   gateway: <gateway_for_the_subnet_you_are_deploying_to>
   dns:
-  # The micro-bosh VM has the following DNS entries in its /etc/resolv.com, allowing it to resolve, for example, IaaS FQDNs.
+  # The micro-bosh VM has the following DNS entries in its /etc/resolv.conf, allowing it to resolve, for example, IaaS FQDNs.
   - <ip_for_dns>
   cloud_properties:
     name: <network_name_according_to_vsphere>
@@ -368,7 +394,7 @@ cloud:
       ntp:
         - <ntp_host_1>
         - <ntp_host_2>
-     vcenters:
+     vcenters:	# here, list all vCenters that you want MicroBOSH to know about
        - host: <vcenter_ip>
          user: <vcenter_userid>
          password: <vcenter_password>
@@ -386,7 +412,7 @@ cloud:
 
 apply_spec:
   properties:
-    vcenter:
+    vcenter:	# here, specify the vCenter where you want MicroBOSH to run
       host: <vcenter_ip>
       user: <vcenter_userid>
       password: <vcenter_password>
@@ -407,31 +433,13 @@ apply_spec:
 
 ~~~
 
-The `apply_spec` provides Micro BOSH with the vCenter settings in order for it
-to deploy Cloud Foundry.
-It is different than the vCenter you are using to deploy MicroBOSH because
-MicroBOSH can deploy to a different vCenter than the one it was deployed to.
+### <a id="datastore"></a> Configuring Datastores in vSphere  ###
 
-If you want to create a role for the BOSH user in vCenter, the privileges are
-defined [here](./vcenter_user_privileges.html).
+The `datastore_pattern` attribute can either be the name of a datastore or a
+regular expression that matches one or more datastore names.
 
-Before you can run micro BOSH deployer, you have to create folders according to
-the values in your manifest.
-
-1. Create the vm_folder
-1. Create the template_folder
-1. Create the disk_path in the appropriate datastores
-1. Create the resource_pool (optional)
-
-
-* Datastore Patterns
-
-The datastore pattern above could just be the name of a datastore or some
-regular expression matching the datastore name.
-
-If you have a datastore called "vc\_data\_store\_1" and you would like to use
-this datastore for both persistent and non persistent disks, your config would
-look like this:
+If you want to use a datastore called "vc\_data\_store\_1"
+for both persistent and ephemeral disks, use the following configuration:
 
 ~~~yaml
                datastore_pattern: vc_data_store_1
@@ -439,9 +447,9 @@ look like this:
                allow_mixed_datastores: true
 ~~~
 
-If you have two datastores called "vc\_data\_store\_1" and
-"vc\_data\_store\_2", and you would like to use both datastore for both
-persistent and non persistent disks, your config would look like this:
+If you want to use two datastores, called "vc\_data\_store\_1" and
+"vc\_data\_store\_2", for both persistent and ephemeral disks,
+use the following configuration:
 
 ~~~yaml
                datastore_pattern: vc_data_store_?
@@ -449,15 +457,11 @@ persistent and non persistent disks, your config would look like this:
                allow_mixed_datastores: true
 ~~~
 
-If you have two datastores called "vnx:1" and "vnx:2", and you would like to
-separate your persistent and non persistent disks, your config would look like
-this:
+If you want to use two datastores, named "vnx:1" and "vnx:2", and you want to
+separate your persistent and ephemeral disks, use the following configuration:
 
 ~~~yaml
                datastore_pattern: vnx:1
                persistent_datastore_pattern: vnx:2
                allow_mixed_datastores: false
 ~~~
-
-
-
