--- a/recent.html.md.erb
+++ b/recent.html.md.erb
@@ -2,6 +2,10 @@
 Title: Recent Additions and Updates
 ---
 
+* [CLI v2 vs v1](cli-v2.html)
+
+---
+
 * [Addon placement rules](runtime-config.html#addons)
 * [Director-wide tagging](runtime-config.html#tags.html)
 * [Deployment tagging](manifest-v2.html#tags)
