--- a/windows-sample-release.html.md.erb
+++ b/windows-sample-release.html.md.erb
@@ -4,10 +4,17 @@ title: Sample BOSH Windows Release
 
 This is a sample BOSH release than can be deployed using a Windows stemcell. It has a single job called `say-hello` that repeatedly prints out a message.
 
-After creating a deployment with this release and the `say-hello` job you can access the job's standard out with the `bosh log` command (see documentation on [BOSH logs](job-logs.html) for more information).
+After creating a deployment with this release and the `say-hello` job you can access the job's standard out with the `bosh log` command (see documentation on [logs](job-logs.html) for more information).
 
 ---
 ## <a id="release-structure"></a> Release Structure
+
+<pre class="terminal">
+$ mkdir sample-windows-release
+$ cd sample-windows-release
+$ bosh init-release --git
+$ bosh generate-job say-hello
+</pre>
 
 ```
 jobs/
@@ -25,22 +32,24 @@ packages/
 ---
 ### <a id="say-hello-spec"></a> `spec`
 
-The `spec` file specifies the job name and description. It also contains the templates to render, which may depend on zero or more packages. See the documentation on [BOSH job spec files](jobs.html#spec) for more information.
+The `spec` file specifies the job name and description. It also contains the templates to render, which may depend on zero or more packages. See the documentation on [job spec files](jobs.html#spec) for more information.
 
 ```yaml
 ---
 name: say-hello
+
 description: "This is a simple job"
+
 templates:
   start.ps1: bin/start.ps1
 
-packages:
+packages: []
 ```
 
 ---
 ### <a id="say-hello-monit"></a> `monit`
 
-The `monit` file includes zero or more processes to run. Each process specifies an executable as well as any arguments and environment variables. See the documentation on [BOSH monit files](jobs.html#monit) for more information. Note, however, that Windows monit files are JSON config files for [Windows service wrapper](https://github.com/kohsuke/winsw), not config files for the monit Unix utility.
+The `monit` file includes zero or more processes to run. Each process specifies an executable as well as any arguments and environment variables. See the documentation on [monit files](jobs.html#monit) for more information. Note, however, that Windows monit files are JSON config files for [Windows service wrapper](https://github.com/kohsuke/winsw), not config files for the monit Unix utility.
 
 ```json
 {
@@ -58,7 +67,7 @@ The `monit` file includes zero or more processes to run. Each process specifies 
 ```
 
 ---
-### <a id="say-hello-start.ps1"></a> `start.ps1`
+### <a id="start-ps1"></a> `start.ps1`
 
 The `start.ps1` script executed by the [service-wrapper](https://github.com/kohsuke/winsw) loops indefintely while printing out a message:
 
@@ -70,24 +79,21 @@ while ($true)
 }
 ```
 
-
 ---
 ## <a id='deploying'></a> Creating and Deploying the Sample Release
 
-If you have BOSH director with a windows stemcell uploaded, you can create
-the above-described release with an empty `blobs.yml` and `final.yml`, then try deploying it:
+If you have the Director with a Windows stemcell uploaded, you can create the above described release with an empty `blobs.yml` and `final.yml`, then try deploying it:
 
-```bash
-$ touch config/blobs.yml
-$ echo 'name: sample-windows-release' >config/final.yml
-$ bosh create-release --tarball=/tmp/sample-windows-release.tgz
-$ bosh upload-release /tmp/sample-windows-release.tgz
+<pre class="terminal">
+$ cd sample-windows-release
+$ bosh create-release --force
+$ bosh upload-release
 $ bosh -d sample-windows-deployment deploy manifest.yml
-```
+<pre/>
 
-For information about BOSH deployment basics, see the [Basic Workflow](basic-workflow.html) documenation.
+For information about deployment basics, see the [Basic Workflow](basic-workflow.html) documenation.
 
-Here is a sample manifest. For information on manifest basics, see the [BOSH Deployment Manifest](deployment-manifest.html) documentation.
+Here is a sample manifest. For information on manifest basics, see the [Deployment Manifest](deployment-manifest.html) documentation.
 
 ```yaml
 name: sample-windows-deployment
@@ -103,27 +109,19 @@ stemcells:
 
 update:
   canaries: 1
+  max_in_flight: 1
   canary_watch_time: 30000-300000
   update_watch_time: 30000-300000
-  max_in_flight: 1
-  max_errors: 2
-  serial: false
 
 instance_groups:
 - name: hello
-  stemcell: windows
-  vm_type: {{REPLACE_ME}}
-  vm_extensions:
-  - {{REPLACE_ME}}
-  azs: [{{REPLACE_ME}}]
-  networks:
-  - name: {{REPLACE_ME}}
+  azs: [z1]
+  instances: 1
   jobs:
   - name: say-hello
     release: sample-windows-release
-  instances: 1
-  lifecycle: service
+  stemcell: windows
+  vm_type: default
+  networks:
+  - name: default
 ```
-
-where `vm_type`, `vm_extensions`, `azs`, and `networks` comes from your cloud config,
-which can be obtained with `bosh cloud-config`.
