--- a/windows.html.md.erb
+++ b/windows.html.md.erb
@@ -9,7 +9,7 @@ can be found on the [Bosh.io Stemcell Page](http://bosh.io/stemcells). Additiona
 In general Windows BOSH Releases work in the same way as a standard BOSH release. The main difference is that the [monit file](create-release.html#monit) for Linux Releases is structured differently on Windows. Below are specific concerns for jobs on Windows.
 
 ---
-## <a id="Releases"></a> Releases
+## <a id="releases"></a> Releases
 
 The structure of a BOSH release for Windows is identical to [Linux BOSH Releases](http://bosh.io/docs/create-release.html).  This means the structure of a Windows BOSH release will be:
 
@@ -20,7 +20,7 @@ The structure of a BOSH release for Windows is identical to [Linux BOSH Releases
 - additional hook scripts
 
 ---
-## <a id="Jobs"></a> Jobs
+## <a id="jobs"></a> Jobs
 
 The structure of a BOSH job for Windows is similar to the [Standard Linux BOSH Job Lifecycle](http://bosh.io/docs/job-lifecycle.html), only with processes monitored by [Windows Service Wrapper](https://github.com/kohsuke/winsw) instead of monit.
 
